# ultra-file-search

./: README.md  pyproject.toml  setup.py
.pytest_cache/v/cache/: nodeids
tests/: test_ultra_file_search.py
ultra_file_search/: __init__.py  core.py
